--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ type="text/css"
 />
 
 <!-- STYLES -->
-<!-- <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" /> -->
+<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
 <link
 rel="stylesheet"
 type="text/css"
@@ -51,8 +51,10 @@ crossorigin="anonymous"
 />
 
 
-<link rel="stylesheet" href="styles.a4124433f0339633a719.css"></head>
+
+
+<link rel="stylesheet" href="styles.918650b938204bc4a446.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.bd840c64fd426e50de96.js"></script></body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.1707c89b6bb10a34d528.js"></script></body>
 </html>
