--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/ico/favicon-leidy.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/ico/favicon2.ico">
 
 
 
@@ -26,7 +26,7 @@ type="text/css"
 />
 
 <!-- STYLES -->
-<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
+<!-- <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" /> -->
 <link
 rel="stylesheet"
 type="text/css"
@@ -51,10 +51,10 @@ crossorigin="anonymous"
 />
 
 
-
-
-<link rel="stylesheet" href="styles.918650b938204bc4a446.css"></head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.0aa2c162a8be28e1dbc7.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.1707c89b6bb10a34d528.js"></script></body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.5d60be48359fc631c82b.js"></script></body>
 </html>
